# dmarc-report-parser

./: .gitattributes  .pylintrc  README.md  pyproject.toml  requirements.txt  requirements_lint.txt
.github/workflows/: lint.yml  test-integration.yml  test-unit.yml  test.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
docs/source/_includes/: head.rst
docs/source/base/: fork.rst  license.rst
docs/source/output/: elasticsearch.md  output.md
docs/source/usage/: config.rst  exec.rst  setup.rst
src/dmarc_report_parser/: cli.py  main.py  main_test.py  testdata.py
src/dmarc_report_parser/input/: gmail.py  graph.py  imap.py  main.py
src/dmarc_report_parser/output/: elastic.py  gelf.py  kafkaclient.py  loganalytics.py  opensearch.py  s3.py  splunk.py  syslog.py
src/dmarc_report_parser/resources/maps/: base_reverse_dns_map.csv
src/dmarc_report_parser/testdata/aggregate/: mimecast-weird-gzip.eml
src/dmarc_report_parser/utils/: main.py
src/test/: tests.py
src/test/samples/aggregate/: Report domain- borschow.com Submitter- google.com Report-ID- 949348866075514174.eml
