[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dmarc_report_parser"
authors = [
    {name = "Rath Pascal", email = "rath@oxl.at"},
]
description = "DMARC Report Analyzer"
readme = "README.md"
requires-python = '>=3.10'
keywords = ["dmarc", "report", "analyzer", "mail", "reporting"]
license = {file = "LICENSE.txt"}
classifiers = [
    'Programming Language :: Python :: 3',
    "License :: OSI Approved :: Apache Software License",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
]
dynamic = ["dependencies", "version"]

[project.urls]
Homepage = "https://github.com/O-X-L/dmarc-report-parser"
Documentation = "https://dmarc-report-parser.o-x-l.com/"
Repository = "https://github.com/O-X-L/dmarc-report-parser.git"
Issues = "https://github.com/O-X-L/dmarc-report-parser/issues"

[project.scripts]
dmarc-report-parser = "dmarc-report-parser.cli:_main"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
version = {file = ["VERSION"]}

[tool.setuptools.packages.find]
where = ["src"]
include = ["dmarc_report_parser"]
exclude = ["dmarc_report_parser.testdata"]

[tool.setuptools.package-data]
"*" = ["*.txt"]
